task_2/deploy1nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: appv1
  name: appv1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appv1
  template:
    metadata:
      labels:
        app: appv1
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-nginx
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-nginx
          configMap:
            name: nginx-configmap
