task_2/service2.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: appv2
  name: appv2
spec:
  selector:
    app: appv2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
status:
  loadBalancer: {}
